--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="script.js">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +12,24 @@
 </head>
 
 <body>
-    
+    <div class="search">
+        <form class="search__form">
+            <div class="search__string">
+                <input type="text" class="search__input">
+                <button class="search__button">найти</button>
+            </div>
+            <div class="search__string">
+
+            </div>
+            <select class="search__select">
+                <option value="Yandex">Yandex</option>
+                <option value="Google">Google</option>
+                <option value="Bing">Bing</option>
+                <option value="DuckDuckGo">DuckDuckGo</option>
+            </select>
+        </form>
+    </div>
+
 
     <script src="./script.js"></script>
 </body>
